--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
             <div class="container">
                 <h1>Ebac Turismo</h1>
                 <button data-bs-toggle="collapse" data-bs-target="#menu" type="button"  class="navbar-toggler">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon bg-light"></span>
                 </button>
                 <nav id="menu" class=" collpse navbar-collapse justify-content-end">
                     <ul class="nav navbar-nav nav-pills">
@@ -36,7 +36,7 @@
     </header>
     <div class="container">
         <div class="row">
-            <div class="col-4">
+            <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="card text-bg-dark">
                     <div class="card-header">
                         Londres - Inglaterra
@@ -47,14 +47,12 @@
                         <p class="card-text">
                             Londres, a capital do Reino Unido é um destino cheio de atrações.
                             Aproveite a beleza de suas ruas para tirar fotos incríveis nos famosos telefones públicos.
-                            Sinta o poder da realeza no Palácio de Buckingham, lar da monarquía britânica; e seja o quinto beatle a caminhar pela Abbey Road.
-                            Londres será sempre um cenário para experiências inesquecíveis.
                         </p>
-                        <a href="#" class="btn btn-primary">Veja mais</a>
+                        <a href="#" class="btn btn-outline-light btn-sm ">Veja mais</a>
                     </div>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-lg-4 col-md-6 col-sm-12 ">
                 <div class="card text-bg-dark">
                     <div class="card-header">
                         Santorini - Grécia
@@ -65,13 +63,12 @@
                         <p class="card-text">
                             Há certos lugares que combinam beleza natural e charme arquitetônico em doses tão precisas e surpreendentes que é 
                             difícil acreditar que realmente existam. Santorini, a mais célebre das ilhas gregas, é assim. 
-                            A Grécia é repleta de grandes destinos sobre arquipélagos, mas Santorini, definitivamente, arrebata. 
                         </p>
-                        <a href="#" class="btn btn-primary">Veja mais</a>
+                        <a href="#" class="btn btn-outline-light btn-sm">Veja mais</a>
                     </div>
                 </div>
             </div>
-            <div class="col-4">
+            <div class="col-lg-4 col-md-6 col-sm-12">
                 <div class="card text-bg-dark">
                     <div class="card-header">
                         Veneza - Itália
@@ -81,11 +78,9 @@
                         <h4 class="card-tittle">Conheça Veneza</h4>
                         <p class="card-text">
                             Veneza, a capital da região de Vêneto, no norte da Itália, é formada por mais de 100 pequenas ilhas em uma lagoa no Mar Adriático.
-                            A cidade não tem estradas, apenas canais (como a via Grand Canal), repletos de palácios góticos e renascentistas.
-                            Na praça central, Piazza San Marco, ficam a Basílica de São Marcos, coberta de mosaicos bizantinos, e o campanário,
-                            com vista para os telhados vermelhos da cidade.
+                            A cidade não tem estradas, apenas canais, repletos de palácios góticos e renascentistas.
                         </p>
-                        <a href="#" class="btn btn-primary">Veja mais</a>
+                        <a href="#" class="btn btn-outline-light btn-sm">Veja mais</a>
                     </div>
                 </div>
             </div>
